--- a/frontend/src/style/chat.css
+++ b/frontend/src/style/chat.css
@@ -8,6 +8,7 @@ body {
 
 .app {
   width: 80%;
+  margin: 0 auto;
 }
 .header {
   display: flex;
@@ -16,6 +17,7 @@ body {
   padding: 10px 20px;
   color: white;
   width: 100%;
+  height: 50px;
   box-sizing: border-box; /* Include padding and border in the element's total width */
   position: fixed; /* Fix the header at the top */
   top: 0;
@@ -23,6 +25,7 @@ body {
   right: 0;
   z-index: 1000; /* Ensure the header is above other elements */
   background-color: #2b2929;
+  margin: 0cm;
 }
 
 .header .logo {
@@ -86,6 +89,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #444; /* Dark background for feature boxes */
   margin-bottom: 20px;
+  word-wrap: break-word;
 }
 
 .feature-box {
@@ -130,4 +134,6 @@ body {
   grid-template-columns: repeat(2, 1fr);
   gap: 20px; /* Space between the grid items */
   padding: 20px;
+  justify-content: space-between; /* Distribute space between grid items horizontally */
+  align-content: space-between;
 }
