--- a/frontend/src/style/chat.css
+++ b/frontend/src/style/chat.css
@@ -31,6 +31,8 @@ body {
 .header .logo {
   font-size: 24px;
   font-weight: bold;
+  color: #ddd;
+  text-decoration: none;
 }
 
 .header .nav {
@@ -41,7 +43,7 @@ body {
 .header .nav a {
   text-decoration: none;
   color: white;
-  font-size: 16px;
+  font-size: 22px;
   transition: color 0.3s;
 }
 
@@ -103,7 +105,7 @@ body {
   margin: 10px auto;
   border: none;
   border-radius: 5px;
-  background-color: #555;
+  background-color: #555555;
   color: white;
   font-size: 16px;
   cursor: pointer;
@@ -127,8 +129,15 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 0px;
 }
 
+.speech-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0px;
+}
 .output {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
